--- a/fetch-data/index.html
+++ b/fetch-data/index.html
@@ -13,9 +13,12 @@
 
 <body>
     <pre id="message-container"></pre>
+    <hr>
+    <pre id="message-container-parse"></pre>
     <script>
 
         const csvUrl = 'https://gist.githubusercontent.com/curran/b236990081a24761f7000567094914e0/raw/cssNamedColors.csv';
+        // const csvUrl = 'cssNamedColors.csv';
 
         // With d3.csv
         d3.csv(csvUrl).then(data => {
@@ -26,19 +29,22 @@
             document.getElementById('message-container').textContent = message;
         });
 
-      // With fetch, async, and await.
-      // const fetchText = async (url) => {
-      //   const response = await fetch(url);
-      //   return await response.text();
-      // };
-      // fetchText(csvUrl).then(text => {
-      //   const data = d3.csvParse(text);
-      //   let message = '';
-      //   message = message + Math.round(text.length / 1024) + ' kB\n';
-      //   message = message + data.length + ' rows\n';
-      //   message = message + data.columns.length + ' columns';
-      //   document.getElementById('message-container').textContent = message;
-      // });
+        // With fetch, async, and await.
+        const fetchText = async (url) => {
+            console.log('-----', url);
+            const response = await fetch(url);
+            return await response.text();
+        };
+
+        fetchText(csvUrl).then(text => {
+            const data = d3.csvParse(text);
+            console.log(data);
+            let message = '';
+            message = message + Math.round(text.length / 1024) + ' kB\n';
+            message = message + data.length + ' rows\n';
+            message = message + data.columns.length + ' columns';
+            document.getElementById('message-container-parse').textContent = message;
+        });
 
       // Pyramid of Doom.
       // fetch(url).then(response => {
